# arrayfire-lua

./: .gitmodules  ArrayFireWrapper.sln  CMakeLists.txt  LICENSE  README.md  arrayfire-3.4-0.rockspec  arrayfire.lua
ArrayFireWrapper/: ArrayFireWrapper.cpp  ArrayFireWrapper.rc  ArrayFireWrapper.vcxproj  ArrayFireWrapper.vcxproj.filters  Resource.h  stdafx.cpp
CMakeModules/: build_lua.cmake  lua_MSVC.patch
arrayfire/: algorithm.lua  args.cpp  args_template.h  arith.lua  array.lua  array_creators.cpp  array_methods.cpp  arrayfire.cpp  arrayfire.vcxproj  arrayfire.vcxproj.filters  blas.lua  defines.lua  device.lua  dim4.lua  doubles_template.h  from_template.h  funcs.h  in_template.h  lib.lua  methods.h  out2_in2_template.h  out2_in_template.h  out_in2_template.h  out_in3_template.h  out_in_template.h  out_template.h  util.lua  utils.cpp  utils.h
arrayfire/funcs/: AddEnums.cpp  Backends.cpp  ComputerVision.cpp  IO.cpp  ImageProcessing.cpp  Interface.cpp  LinearAlgebra.cpp  Math.cpp  Mathematics.cpp  SignalProcessing.cpp  Statistics.cpp  Util.cpp  Vector.cpp
arrayfire/graphics/: Draw.cpp  Window.cpp
arrayfire/methods/: AssignIndex.cpp  Constructor.cpp  Create.cpp  Device.cpp  Features.cpp  Helper.cpp  Methods.cpp  MoveReorder.cpp
arrayfire/template/: doubles.h  in.h  out_in2.h  out_in3.h
examples/benchmarks/: pi.lua
examples/cpp/ArrayFireWrapper/: ReadMe.txt
examples/financial/: heston_model.lua
examples/getting_started/: rainfall.lua
examples/graphics/: fractal.lua  plot2d.lua  surface.lua
examples/helloworld/: intro.lua
examples/image_processing/: filters.lua
examples/lin_algebra/: qr.lua
examples/machine_learning/: rbm.lua
ffi/: ArrayFire.lua
lib/: arrayfire.lua
lib/funcs/: gfor.lua  io.lua  linear_algebra.lua  mathematics.lua  signal_processing.lua  vector.lua
lib/graphics/: window.lua
lib/impl/: array.lua  index.lua  operators.lua
lib/methods/: constructors.lua  device.lua  methods.lua  move_reorder.lua
lib/misc/: env_loop.lua  imports.lua  program.lua
lua/: ReadMe.txt  lua.vcxproj  lua.vcxproj.filters
rocks/: arrayfire-scm-1.rockspec
scripts/lib/: af_lib.lua
src/LuaJIT/: ArrayFire.lua
test/lua/: test1.lua
wrapper/Lua/: CMakeLists.txt  arrayfire.cpp  utils.h
wrapper/Lua/arrayfire/: ReadMe.txt  lua_compat.h
wrapper/Lua/arrayfire/graphics/: Draw.cpp
wrapper/Lua/arrayfire/methods/: AssignIndex.cpp  Device.cpp
wrapper/Lua/funcs/: LinearAlgebra.cpp
wrapper/Lua/methods/: Create.cpp  Methods.cpp  MoveReorder.cpp
wrapper/Lua/template/: out_in.h
wrapper/wrapper/: ArrayFireWrapper.sln
(+156 files in other folders)
